# bioseq_ml

./: .gitignore  README.md  pyproject.toml
bioseq_ml/: __init__.py
bioseq_ml/data_modules/: __init__.py  data_module.py
bioseq_ml/models/: __init__.py  binary_classifier.py
bioseq_ml/modules/: __init__.py  conv.py  dense.py  embedding.py  multi_input_wrappers.py  pooling.py  util.py
bioseq_ml/utils/: __init__.py  model_utils.py
demos/demo1_toy/: create_data.py  dataset.py  gen_attrs.py  run_training.py
demos/demo1_toy/data/: data_sl32_nmotifs24.csv  data_sl32_nmotifs48.csv  motif_dict_sl32_nmotifs24.json  motif_dict_sl32_nmotifs48.json
demos/demo1_toy/specs/data/: toy_24.json  toy_48.json
demos/demo1_toy/specs/model/: cnn_bincls_1.json
demos/demo1_toy/specs/training/: bin_toy24_1.json  bin_toy48_1.json
demos/demo1_toy/training_output/toy_24/version_3/: data_spec.json  events.out.tfevents.1664510917.Rosss-MBP.attlocal.net.13339.1  test_res.json  training_spec.json
demos/demo1_toy/training_output/toy_48/version_0/: data_spec.json  events.out.tfevents.1664511770.Rosss-MBP.attlocal.net.15501.0  events.out.tfevents.1664512580.Rosss-MBP.attlocal.net.15501.1  hparams.yaml  model_spec.json  test_res.json  training_spec.json
demos/demo1_toy/training_output/toy_48/version_0/checkpoints/: epoch=9-best_val_loss.ckpt
demos/demo1_toy/training_output/toy_48/version_1/: events.out.tfevents.1664515084.Rosss-MBP.attlocal.net.16223.1  hparams.yaml  test_res.json  training_spec.json
dev_scripts/: test_conv.py  test_dense.py  test_embedding.py  test_model_builder.py
(+2 files in other folders)
